data/derived/comb/progs/unify/prog3410.ml.out
Characters 64-65:
  let fixpoint (f,b) = wwhile (if ((f b) = b) then b else wwhile (f,f b));;
                                                                  ^
Error: This expression has type
         ('a -> 'a * bool) * 'a -> ('a -> 'a * bool) * 'a
       but an expression was expected of type
         ('a -> 'a * bool) * 'a -> (('a -> 'a * bool) * 'a) * bool
       Type ('a -> 'a * bool) * 'a is not compatible with type
         (('a -> 'a * bool) * 'a) * bool 
